--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wheelz on the bike</title>
+    <meta name="description" content="Properties in Panjim on rent ">
+  <meta name="keywords" content="Properties in Panjim on rent , rent in panjim">
+    <title>Properties in Panjim on rent </title>
     <link rel="stylesheet" href="main.css" />
     <link
       rel="stylesheet"
