--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     
     <form>
         <div class="form-row container">
-          <div class="col-2">
+          <div class="col-lg-2">
             <select id="inputState" class="form-control">
                 <option selected>Pick up location</option>
                 <option >Panaji</option>
@@ -89,10 +89,10 @@
               </select>
           </div>
           
-          <div class="col-2">
+          <div class="col-lg-2 col-sm-12">
             <input type="text" id="datepicker" placeholder ="Pick Up Date" class="form-control">
           </div>
-          <div class="col-2">
+          <div class="col-lg-2 col-sm-12">
             <select id="inputState" class="form-control">
                 <option selected>Pick Up time </option>
                 <option >9:00</option>
@@ -108,10 +108,10 @@
                 <option>19:00</option>
               </select>
           </div>
-          <div class="col-2">
+          <div class="col-lg-2 col-sm-12">
             <input type="text" id="datepicker2" placeholder ="Drop Off Date" class="form-control">
           </div>
-          <div class="col-2">
+          <div class="col-lg-2 col-sm-12">
             <select id="inputState" class="form-control">
                 <option selected>Drop Off time </option>
                 <option >9:00</option>
@@ -127,7 +127,7 @@
                 <option>19:00</option>
               </select>
           </div>
-          <div class="col-2">
+          <div class="col-lg-2 col-sm-12">
             <button type="button" class="btn btn-success">Search bikes</button>
           </div>
         </div>
